--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ add_executable(${PROJECT_NAME} ${SCRS_FILES} )
 find_package(SFML COMPONENTS system window graphics network audio REQUIRED)
 find_library(wiringPi_LIB wiringPi)
 find_library(bcm2835_lib bcm2835 )
-target_link_libraries(${PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system)
+target_link_libraries(${PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system ${wiringPi_LIB} ${bcm2835_lib})
